# amorist

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build-appimage.sh  build-install-deb.sh  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-deb.yml  build.yml
docs/: bug-bold-inline-code-serialized-as-0.md  decision-exec-command.md  plan-tauri-markdown-editor-20260517-1654.md  plan-tauri-markdown-editor-20260517-1654.ops.md
docs/refactor-discovery/: registry.md
fixtures/: plan-cycle-sample.md  plan-cycle-with-notes.md
scripts/: README.md  capture-screenshots.mjs  capture-screenshots.sh  install-ubuntu.sh  install.sh  uninstall.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: amorist.desktop
src-tauri/src/: lib.rs  main.rs
src/app/: commands.test.ts  commands.ts  errors.ts  useDocumentState.test.ts  useDocumentState.ts
src/components/: EmptyState.tsx  ErrorBanner.tsx  StatusBar.tsx  Toolbar.tsx
tests/: app-shell-smoke.test.js  editor-history.test.js  editor-html-to-markdown.test.js  editor-markdown-codec.test.js  editor-table-codec.test.js  editor-view-positioning.test.js  test_runtime_server.py
tests/fixtures/: editor-roundtrip.md  tables.md
web/: app.css  app.js  index.html
web/editor/: amorist-editing-policy.js  amorist-editor.css  amorist-editor.js  amorist-html-to-markdown.js  amorist-markdown-codec.js  amorist-table-codec.js  amorist-text-utils.js
(+21 files in other folders)
