[package]
name = "amorist"
version = "0.1.0"
description = "A fast desktop Markdown editor"
authors = ["elmisi"]
edition = "2021"

[lib]
name = "amorist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-cli = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
